2010-03-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* printing.cpp|h: Stubbed.

2010-03-03  Alan McGovern  <amcgovern@novell.com>

	* uielement.h: C# bindings automaticall take care of removing
	  the "_with_error" from method names but the JS bindings
	  require you to manually override the method name. Why?!
	  Fixes two regressed DRTs.

2010-03-03  Alan McGovern  <amcgovern@novell.com>

	* xaml.cpp: We need to handle "System.Color" too in our
	  PrimitiveNamespace handler. Resolves bug #566783.

2010-03-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: Move the definition of GALLIUM_CFLAGS and GALLIUM_LIBS to
	gallium.m4.

2010-03-03  Andreia Gaita  <avidigal@novell.com>

	* timemanager.cpp: the same callback can be registered more than
	once, so do repeated calls to remove all of them

2010-03-02  Alan McGovern  <amcgovern@novell.com>

	* uielement.h:
	* frameworkelement.h:
	* frameworkelement.cpp: Propagate a MoonError if there is a
	  problem updating the layout. Fixes DRT 321.

2010-03-02  Alan McGovern  <amcgovern@novell.com>

	* frameworkelement.cpp: Fix the aptly named 'LayoutLoops' DRT,
	  the olympics looping issue and the AGControls looping issue.


2010-03-01  Chris Toshok  <toshok@ximian.com>

	* uielement.cpp (EmitGotFocus): add missing else.

2010-03-01  Chris Toshok  <toshok@ximian.com>

	* timesource.cpp (SetTimerFrequency): return early if we're not
	doing anything

	* dirty.cpp (AddDirtyElement): we need to call
	TimeManager::NeedRedraw here so that the dirty pass gets run if
	the time manager is asleep.

	* timemanager.h:
	* timemanager.cpp: flesh out the remaining problems in putting the
	time manager to sleep, and track how long we were asleep so our
	first timeout after restarting is appropriately shortened.

	* clock.h:
	* clock.cpp: add back in the old idle hint handling so we can put
	the time manager to sleep when clocks are filling.

	* dependencyobject.cpp (ProviderValueChanged): if we're using the