@@ -14,7 +14,8 @@ public:
 	MoonClipboardGtk (MoonWindowGtk *win, MoonClipboardType clipboardType);
 
 	void SetSelection (const char *text, int length);
-
+	
+	virtual bool ContainsText ();
 	virtual void SetText (const char *text, int length);
 	virtual void AsyncGetText (MoonClipboardGetTextCallback cb, gpointer data);
 	virtual char* GetText ();
